[new|refactoring] startup page, fix redactor line spacing

--- a/app/assets/stylesheets/base/_typography.sass
+++ b/app/assets/stylesheets/base/_typography.sass
@@ -13,7 +13,7 @@ body
   @extend %font-apercupro-light
   -webkit-font-smoothing: subpixel-antialiased
   -moz-osx-font-smoothing: grayscale
-  letter-spacing: 0.3px
+  letter-spacing: 0.2px
 
 main
   @extend %text-first
