--- a/app/assets/stylesheets/components/_columns.sass
+++ b/app/assets/stylesheets/components/_columns.sass
@@ -1,3 +1,4 @@
 .columns
   column-count: 2
   column-gap: 3.125em
+  column-fill: balance
