--- a/app/assets/stylesheets/components/_title.sass
+++ b/app/assets/stylesheets/components/_title.sass
@@ -2,8 +2,8 @@
   color: $color--brand
 
   &--big
+    @extend %font-apercupro-regular
     @extend %title-first
-    font-weight: bold
   &--middle
     @extend %title-second
   &--small
@@ -11,5 +11,7 @@
 
   &--indent-small
     margin-bottom: 1.125rem
+  &--indent-middle
+    margin-bottom: 1.6rem
   &--indent-large
     margin-bottom: 2.5rem
