--- a/app/assets/stylesheets/utils/_placeholders.sass
+++ b/app/assets/stylesheets/utils/_placeholders.sass
@@ -25,7 +25,7 @@
   line-height: 1.75rem
 %text-first
   font-size: 1rem
-  line-height: 1.32rem
+  line-height: 1.26rem
 %text-second
   font-size: 1.25rem
   line-height: 1.375rem
